2004-11-14  Philip Lafleur  <plafleur@cvs.gnome.org>

	* app/display/gimpdisplayshell-preview.c: Eliminated about 96
	floating-point divides per frame in the persective preview.

2004-11-13  Manish Singh  <yosh@gimp.org>

	Fix a bunch of warnings from Sparse:

	* app/actions/dockable-commands.c
	* app/actions/layers-actions.c
	* app/actions/view-commands.c
	* app/base/pixel-surround.c
	* app/config/gimpconfig-utils.c
	* app/config/gimpscanner.c
	* app/core/gimpbrushgenerated.c
	* app/core/gimpcontainer.c
	* app/core/gimpimage.c
	* app/dialogs/palette-import-dialog.c
	* app/file/gimprecentlist.c
	* app/plug-in/plug-in-params.c
	* app/text/gimptext-compat.c
	* app/text/gimptext-parasite.c
	* app/vectors/gimpbezierstroke.c
	* app/vectors/gimpstroke.c
	* app/widgets/gimpcellrendereraccel.c
	* app/widgets/gimpselectiondata.c
	* app/xcf/xcf.c
	* libgimp/gimp.c
	* libgimpthumb/gimpthumb-utils.c
	* libgimpthumb/gimpthumbnail.c
	* modules/cdisplay_proof.c
	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/common/csource.c
	* plug-ins/common/glasstile.c
	* plug-ins/common/nova.c 
	* plug-ins/common/pcx.c
	* plug-ins/common/pnm.c
	* plug-ins/common/randomize.c
	* plug-ins/common/screenshot.c
	* plug-ins/common/sel_gauss.c
	* plug-ins/common/spheredesigner.c
	* plug-ins/common/wind.c 
	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-dobject.c
	* plug-ins/gimpressionist/gimpressionist.c
	* plug-ins/ifscompose/ifscompose.c
	* plug-ins/print/gimp_main_window.c
	* plug-ins/print/print.c: Cleanup integer vs. pointer confusion.

	* app/base/temp-buf.c
	* app/dialogs/about-dialog.c
	* plug-ins/common/bumpmap.c
	* plug-ins/common/jigsaw.c
	* plug-ins/gfig/gfig-dobject.c: Cosmetic cleanups.

	* app/config/gimpconfig-deserialize.c
	* app/config/gimpconfig-path.c
	* app/config/gimpconfigwriter.c
	* app/core/gimpgradient.c
	* app/tools/gimpdrawtool.c
	* plug-ins/common/nlfilt.c
	* plug-ins/common/unsharp.c
	* plug-ins/common/zealouscrop.c: Define inline functions before they
	are used.
