@@ -4,3 +4,5 @@ Makefile
 _libs
 .libs
 pagecurl
+pagecurl-icons.h
+pagecurl-icons.list
